--- a/XamarinMvvm.Core/XamarinMvvm.Core.csproj
+++ b/XamarinMvvm.Core/XamarinMvvm.Core.csproj
@@ -34,5 +34,8 @@
     <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
