--- a/XamarinMvvm.Core/XamarinMvvm.Core.csproj
+++ b/XamarinMvvm.Core/XamarinMvvm.Core.csproj
@@ -31,8 +31,10 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="MyClass.cs" />
+    <Compile Include="Model\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IItemService.cs" />
+    <Compile Include="Services\ItemService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
