--- a/XamarinMvvm.Android/XamarinMvvm.Android.csproj
+++ b/XamarinMvvm.Android/XamarinMvvm.Android.csproj
@@ -94,5 +94,8 @@
       <Name>XamarinMvvm.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Activities\" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
 </Project>
